test/Harper/Tests/Good/issue5_lam3.har
fun x y = {
  x = x * y;
  return (\n y => x + n + y);
};

main = fun 7 13 17 42;