test/Harper/Tests/Bad/issue5_unassigned.har
fun = {
    var x;
    n = x;
    return n;
};

main = fun;